2010-06-13  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Merge the following changes.

	2010-06-13  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Bump required tool versions.

	* configure.ac: Require Autoconf 2.65 and Python 2.6.

	2010-06-13  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Better support for C99.

	* configure.ac: Require a C99 compiler.

	* tools/bin/cce.in: Do not add `-std=gnu99', since `configure' now
	does the right thing.

2010-06-11  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Extend build process for `hrt' targets.

	* build-aux/slc.m4: New conditional ENABLE_SLC_HRT.

	* build-aux/ax_pthread.m4: Import from the Autoconf archive.
	* configure.ac: Use it.

	* tools/bin/Makefile.am,
	* tools/bin/cce.in: Propagate compiler/flags for pthreads to use
	with `hrt' targets.

	* tools/lib/host-host-hrt/include/sl_hrt.h,
	* tools/lib/host-host-hrt/tc.c: New (placeholders).

	* tools/lib/host-host-hrt/slrt.c,
	* tools/lib/hrt.mk: New.

	* tools/lib/Makefile.am: Use `hrt.mk' too.

	* tools/lib/t-spr/include/sl_support.h: Include `sl_hrt.h' when
	appropriate.

	* tools/lib/slc/am/visitors.py: Remove `visit_programs', since the
	runtime header is now included automatically.

2010-06-11  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Merge contribution from Andrei Matei: new `hrt' back-end.

	* tools/lib/slc/am/__init__.py,
	* tools/lib/slc/am/visitors.py: New.

	* tools/lib/slc/front/chains.py: Define new chain `hrt'.

2010-06-11  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Introduce new `hrt' targets.

	* tools/bin/cce.in: Recognize aliases `hrt', `hrt_n' and
	`hrt_s'. Update flags accordingly.

2010-06-11  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Remove obsolete files.

	* lib/host-host-ptl/include/svp_os.h,
	* lib/host-host-seqc/include/svp_os.h,
	* lib/mtalpha-sim/include/svp_asmdiv.h,
	* lib/mtalpha-sim/include/svp_os.h: Remove.

	* lib/seqc.mk,
	* lib/ptl.mk,
	* lib/mtalpha.mk: Update accordingly.

2010-06-11  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Enhance `cce'.
